@@ -1,7 +1,14 @@
+Fri Feb 29 03:05:12 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/modelin/Picmlin_App.cpp:
+         
+          Added more debug messages that generated during verbose 
+          mode.
+
 Fri Feb 29 03:04:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * etc/config/cuts_gme.mpb:
-        
+
           Fixed the project specification for static builds of GME.
 
 Thu Feb 28 21:04:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
